[package]
name = "cliweather"
version = "0.1.5"
edition = "2021"
description = "CLI weather checking program written in Rust"
license = "GPL-3.0"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
prettytable = "0.10"
crossterm = "0.28.1"

[[bin]]
name = "cliweather" 
path = "src/main.rs"
